--- a/.github/workflows/master_airplane-web-api.yml
+++ b/.github/workflows/master_airplane-web-api.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: '${{ github.workspace }}/target/ticketing-0.0.1-SNAPSHOT.jar'
 
   deploy:
     runs-on: ubuntu-latest
